--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>fluentast-core</artifactId>
 
     <properties>
-        <kotlin.version>1.1.4-3</kotlin.version>
+        <kotlin.version>1.1.50</kotlin.version>
         <dokka.version>0.9.15</dokka.version>
         <junit.version>5.0.0</junit.version>
     </properties>
@@ -67,6 +67,11 @@
             <version>5.0.0</version>
             <scope>test</scope>
         </dependency>
+      <dependency>
+        <groupId>org.jetbrains.kotlin</groupId>
+        <artifactId>kotlin-stdlib-jre8</artifactId>
+        <version>${kotlin.version}</version>
+      </dependency>
     </dependencies>
 
     <build>
