--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
-title: Jekyll Doc Theme
-email: your-email@domain.com
+title: Fluentast
+email: hansjrgschroedl@gmail.com
 description: >
-  Jekyll Template for Project Websites
-  providing documentation and blog post pages.
+  Fluentast is a fluent API to create Java code.
 
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: https://aksakalli.github.io/jekyll-doc-theme # the base hostname & protocol for your site
-git_address: https://github.com/aksakalli/jekyll-doc-theme
-git_edit_address: https://github.com/aksakalli/jekyll-doc-theme/blob/gh-pages
+baseurl: ""
+url: https://github.com/hschroedl/FluentAST # the base hostname & protocol for your site
+git_address: https://github.com/hschroedl/FluentAST
+git_edit_address: https://github.com/hschroedl/FluentAST/blob/gh-pages
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
