--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,8 +4,8 @@ email: hansjrgschroedl@gmail.com
 description: >
   The fluent way to create Java code 
 
-baseurl: ""
-url: https://hschroedl.at/FluentAST/
+baseurl: "FluentAST"
+url: https://hschroedl.at/
 git_address: https://github.com/hschroedl/FluentAST
 git_edit_address: https://github.com/hschroedl/FluentAST/blob
 
