--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ email: hansjrgschroedl@gmail.com
 description: >
   The fluent way to create Java code 
 
-baseurl: "FluentAST"
+baseurl: ""
 url: https://hschroedl.at/
 git_address: https://github.com/hschroedl/FluentAST
 git_edit_address: https://github.com/hschroedl/FluentAST/blob
