Revert "Clean up, add draft for syntax page"
This reverts commit feeca789848178df84f70e5bc509cfbed9e8736a.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -54,3 +54,10 @@ defaults:
     sectionid: docs/fluentast-core
     seo:
       type: "WebPage"
+
+collections:
+  docs:
+    output: true
+  posts:
+    permalink: /blog/:year/:month/:day/:title/
+    output: true
