--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,8 +6,8 @@ description: >
 
 baseurl: "/FluentAST"
 url: https://hschroedl.at
-git_address: https://github.com/hschroedl/FluentAST
-git_edit_address: https://github.com/hschroedl/FluentAST/blob/master/docs/
+git_address: https://github.com/hschroedl/Fluentast
+git_edit_address: https://github.com/hschroedl/Fluentast/blob/master/docs/
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
