--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ script: mvn clean verify
 cache:
   directories:
   - $HOME/.m2
+notifications:
+  email:
+    on_success: never
+    on_failure: always
